wb-update-manager (1.2.5-upgrade5) stable; urgency=medium

  * break Debian release update process if updated tool is available

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 26 Oct 2022 19:03:53 +0600

wb-update-manager (1.2.5-upgrade4) stable; urgency=medium

  * fix reboot reminder message installation

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 19 Oct 2022 19:26:30 +0600

wb-update-manager (1.2.5-upgrade3) stable; urgency=medium

  * Add notice about Debian Bullseye to login message

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Wed, 12 Oct 2022 16:00:21 +0500

wb-update-manager (1.2.5-upgrade2) stable; urgency=medium

  * fix debian release update under some conditions

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 06 Oct 2022 00:03:07 +0600

wb-update-manager (1.2.5-upgrade1) stable; urgency=medium

  * Added option to switch to a new Debian distribution

 -- Roman Kochkin <roman.kochkin@wirenboard.ru>  Sat, 17 Sep 2022 14:09:19 +0400

wb-update-manager (1.2.5) stable; urgency=medium

  * log to journald instead of file by default

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Mon, 24 Jan 2022 13:50:03 +0300

wb-update-manager (1.2.4) stable; urgency=medium

  * fix first run without sources.list (fails in build-image)

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 29 Dec 2021 11:45:03 +0300

wb-update-manager (1.2.2) stable; urgency=medium

  * run autoremove without confirmation
  * cleanup apt lists cache on errors
  * retry upgrade if system state is inconsistent (interrupted during
    dist-upgrade)

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Sun, 26 Dec 2021 15:21:09 +0300

wb-update-manager (1.2.0) stable; urgency=medium

  * write update logs to file in /var/log/wb-release
  * run apt dist-upgrade in two stages (simulate + upgrade) by default
  * always run apt in non-interactive mode for correct logging

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 21 Oct 2021 13:29:25 +0300
