@@ -1,6 +1,7 @@
 wb-update-manager (1.2.5-upgrade5) stable; urgency=medium
 
   * break Debian release update process if updated tool is available
+  * restart wb-release tool after initial apt-upgrade on Debian release update
 
  -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 26 Oct 2022 19:03:53 +0600
 
